# sedtrails-sgp

./: .gitignore  CITATION.cff  CITATION_MGACH.cff  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  WAIVER  connectivity_enhanced_demo.ipynb  debug_sedtrails.py  environment.yml  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: test-scenario.md
.github/workflows/: publish.yml  pylint.yml  pytest.yml  ruff.yml  sedtrails-publish-pypi.yml
diagrams/: components-analysis-app.puml  components-api.puml  components-cache-app.puml  components-config-app.puml  components-connectivity-app.puml  components-converter-app.puml  components-data-app.puml  components-sim-api.puml  components-sim-orchestrator.puml  components-tracer-app.puml  componets-analysis-app.puml  componets-cache-app.puml  componets-config-app.puml  componets-connectivity-app.puml  componets-converter-app.puml  componets-data-app.puml  componets-particle-tracer.puml  componets-stats-app.puml  componets-tracer-app.puml  componets-transpor-converter.puml  componets-transpor-sedtrails.puml  componets-transport-converter.puml  componets.puml  containers.puml  context-system.puml
docs/: api-refs.rst  conf.py  developing.md  index.rst  introduction.rst  quickstart.md  requirements.txt
docs/apidocs/: index.rst
docs/developer/: architecture.md  architecture2.md  benchmark_runs_matlab.md  contribution.md  dev-environment.md  installation.md  plugins.md  principles.md
docs/notes/: README.md  benchmark_runs_matlab.md  particle-tracer.rst  transport-converter.rst
docs/references/: simulation-params.md
docs/sourcecode/: particle-tracer.rst
docs/tutorials/: tutorial1.md  tutorial2.md
docs/user/: basic_tutorial.md  dashboard.md  documentation_seeding.md  installation.md  output.md  outputs.md  seeding.md  simulations.md
examples/: config.example.yaml  config.example_bart.yaml  config.example_soulsby.yaml  log_example.txt  numba_example.py  particle_simulation_example.py  particle_simulation_numba_example.py  reading_flowfields_example.py  sedtrails_config.yaml  seeder_example.py  visualization_utils.py
resources/: config_schema.json  create_validation_schema.py  sedtrails_config.md
results/: log.txt
sample-data/: readme.md
src/sedtrails/: __init__.py  __version__.py  exceptions.py  mock_api.py  nc_inspector.py  sedtrails.py  sedtrailsmodel.py  simulation.py  simulation_bart.py  simulation_bart_v2.py
tests/: CODE_REVIEW.md  README.md  test_example.py  test_particleinterpolator.py
tests/CLI/: test_sedtrails_cli.py
tests/cli/: test_sedtrails_cli.py
tests/configuration_interface/: test_inputconfigurator.py
tests/configuration_interfaces/: test_inputconfigurator.py
tests/converters/: calculate_shields_cr.py  dstar.py  soulsby2011_p.py  test_calculate_shields_cr.py  test_dstar.py  test_soulsby2011_p.py
tests/data_manager/: test_manager.py  test_memory_manager.py  test_netcdf_reader.py  test_netcdf_writer.py  test_simulation_buffer.py
tests/input/: test_inputconfigurator.py
tests/logger/: test_logger.py
tests/particle_tracer/: test_diffusion_library.py  test_particle.py  test_particle_seeder.py  test_particle_seeding.py  test_particleinterpolator.py  test_population.py  test_time.py  test_timer.py
tests/test_configuration_interface/: test_inputconfigurator.py
tests/test_particle_tracer/: test_diffusion_library.py  test_particleinterpolator.py
tests/test_transport_converter/: test_format_converter.py
(+203 files in other folders)
